--- a/breakfast.html
+++ b/breakfast.html
@@ -56,11 +56,11 @@
 			  
 			  	<h3>Maxine's French Toast <br><span class="price">$7.98</span></h3>
            		 <p>Four slices of raisin bread dipped in a cinnamon egg wash topped with powered sugar<br>
-             	 Add blueberries or strawberries $1.50</p>
+             	 Add blueberries or strawberries </p>
 			  
 								<h3>The Lumberjack Pancakes<div class="price">$8.98</div></h3>
 								<p>Two buttermilk pancakes topped with powdered sugar and whipped cream<br>
-                Add blueberries or strawberries $1.50</p>
+                Add blueberries or strawberries </p>
 
        	 		<h3>Loaded Breakfast Burrito<div class="price">$13.98</div></h3>        <p>Three scrambled eggs, bacon, sausage, ham, onions, red peppers, potatoes, white cheddar cheese, grilled in our Italian butter, served with Bays potatoes or hashbrowns</p>
 
