--- a/index.html
+++ b/index.html
@@ -62,14 +62,11 @@
 
 
 
-          <div  id="pic-container"> <img class="pic fritata" alt="egg frittata" style="height: 100%; width:95%; object-fit:contain;" src= "images/burger-fries.jpg">
+          <div  id="pic-container"> <img class="pic fritata" alt="burger and fries" style="height: 100%; width:95%; object-fit:contain;" src= "images/burger-fries.jpg">
           </div>
 
 
           <div  id="pic-container"> <img class="pic" alt="great salad" style="height: 100%; width:95%; object-fit:contain;" src= "images/salad.jpg">
-          </div>
-
-          <div  id="pic-container"> <img class="pic" alt="great salad" style="height: 100%; width:95%; object-fit:contain;" src= "images/front.jpg">
           </div>
 
       
