--- a/breakfast.html
+++ b/breakfast.html
@@ -52,7 +52,7 @@
 			  	
 			  	<h3>Ted's Traditional Breakfast <span class="price">$7.98</span></h3>
 			  	<p> One Belgian waffle topped with whipped cream and powdered sugar<br>
-                Add blueberries or strawberries $1.50</p>
+                Add blueberries or strawberries </p>
 			  
 			  	<h3>Maxine's French Toast <br><span class="price">$7.98</span></h3>
            		 <p>Four slices of raisin bread dipped in a cinnamon egg wash topped with powered sugar<br>
