--- a/lunch.html
+++ b/lunch.html
@@ -91,7 +91,7 @@
        	 		<p>1/2lb. beef patty seasoned with cracked black pepper topped with white cheddar cheese, lettuce, haystack onions and Dijon mustard. Served with chips and a pickle</p>
 
        	 		<h3>Cajun Burger<div class="price">$10.98</div></h3>
-       	 		<p>1/2lb. beef patty seasoned with Cajun, topped with Swiss cheese, saut. Served with chips and a pickle</p>
+       	 		<p>1/2lb. beef patty seasoned with Cajun, topped with Swiss cheese, saut&eacuteed red peppers and red onion, chipotle aioli. Served with chips and a pickle</p>
 
 
 			  </div>
