--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11541.791879292618!2d-85.02001262285961!3d45.36284233434789!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcba6413ea5761115!2sBayside%20Restaurant!5e0!3m2!1sen!2sus!4v1607487337259!5m2!1sen!2sus" width="250" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
       <div id="address">
-        <h5 class="blue-color  center-align">3890 Charlevoix Ave<br> #290, Petoskey, MI<br> 49770<br><img id="fb-logo" src="images/facebook.png" alt=""></h5>
+        <h5 class="blue-color  center-align">3890 Charlevoix Ave<br> #290, Petoskey, MI<br> 49770<br><a href="https://www.facebook.com/BaysideRestaurantPetoskey/"><img id="fb-logo" src="images/facebook.png" alt=""></a></h5>
         
       </div>
       
