--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="hours">
         <h4 class="center-align"><a href="#menu"><span class="orange-color">BREAKFAST</span></a><br>and<br><span class="orange-color">LUNCH</span></h4>
-        <h5 class="blue-color center-align">EVERYDAY <span class="orange-color">7am-3pm</span></h5>
+        <h5 class="blue-color center-align">Wednesday-Monday <span class="orange-color">7am-3pm</span></h5>
       </div>
 
     </section> <!-- top section -->
